# zabbix-module-sockets

./: .gitignore  Makefile.am  README.md  Vagrantfile  bench.keys  configure.ac  zabbix-module-sockets.spec
conf/: libzbxsockets.conf
selinux/: Makefile.am  libzbxsockets.te
src/modules/sockets/: Makefile.am  libzbxsockets.c  libzbxsockets.h  tcp.c  unix.c
templates/: Makefile.am  Template_App_Sockets_3.2.xml  Template_App_TCP6_Sockets_3.2.xml  Template_App_TCP_Sockets_3.2.xml  Template_App_UDP6_Sockets_3.2.xml  Template_App_UDP_Sockets_3.2.xml  Template_App_Unix_Sockets_3.2.xml
